<resources>
    <string name="app_name">QuizCard</string>
    <string name="discipline">Matérias</string>
    <string name="start_quiz">Iniciar questionário</string>
    <string name="new_discipline">Nova matéria</string>
    <string name="text_disciplines_empty">Você ainda não possui nenhuma matéria</string>
    <string name="next_card">Próxima</string>
    <string name="question_hint">Digite a pergunta</string>
    <string name="answer_hint">Digite a resposta</string>
    <string name="question">PERGUNTA</string>
    <string name="answer">RESPOSTA</string>
    <string name="new_discipline_text">Nova Matéria</string>
    <string name="name_discipline_hint">Digite o nome da matéria</string>
    <string name="add_discipline">Adicionar matéria</string>
    <string name="name_discipline">Digite o nome da matéria</string>
    <string name="discipline_add">Matéria adicionada com sucesso</string>
    <string name="dellete_discipline">Deletar matéria</string>
    <string name="add_card">Adicionar Questão</string>
    <string name="dellete_card">Deletar card</string>
    <string name="number_cards">%s card(s)</string>
    <string name="message_discipline_escluded">Disciplina excluída com sucesso!</string>
    <string name="discipline_existing">Você já tem essa disciplina</string>
    <string name="cancel_new_card">cancelar</string>
    <string name="question_empty">Digite a pergunta</string>
    <string name="answer_empty">Digite a resposta</string>
    <string name="card_add">Card adicionado com sucesso</string>
    <string name="editar_card">Editar Card</string>
    <string name="delete">Deletar</string>
    <string name="update">Atualizar</string>
    <string name="card_update">Card atualizado com sucesso</string>
    <string name="card_delete">Card removido com sucesso</string>
    <string name="disciplines_is_empty">Selecione pelo menos uma matéria</string>
    <string name="quiz">Quiz</string>
    <string name="cards_empty">Quiz concluído</string>
    <string name="cards_empty_menu">É necessário ter pelo menos um card</string>
    <string name="discipline_question_isempty">Esta disciplina ainda não possui nenhuma questão</string>
    <string name="save">salvar</string>
    <string name="atention">Atenção</string>
    <string name="certain_delete_card">Tem certeza que deseja excluir esta questão</string>
    <string name="yes">SIM</string>
    <string name="not">NÃO</string>
    <string name="certain_delete_discipline">"Tem certeza que deseja deletar %s"</string>


</resources>