<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.appcompat.widget.AppCompatTextView
                android:padding="11dp"
                android:id="@+id/tv_new_discipline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#074E0B"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/new_discipline_text"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_name_discipline"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/shape_edt"
                android:hint="@string/name_discipline_hint"
                android:padding="8dp"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_new_discipline" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_discipline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/shape_button"
        android:backgroundTint="#17731B"
        android:text="@string/add_discipline"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scroll"
        app:layout_constraintVertical_bias="0"
        />

</androidx.constraintlayout.widget.ConstraintLayout>