<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activitys.MenuMainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_discipline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="#074E0B"
        android:padding="11dp"
        android:textColor="@color/white"
        android:paddingVertical="5dp"
        android:paddingStart="10dp"
        android:gravity="start"
        android:text="@string/discipline"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_disciplines_empty"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/text_disciplines_empty"
        android:textColor="#686060"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="12dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_NewDiscipline"
        app:layout_constraintTop_toBottomOf="@id/tv_discipline">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_discipline"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="15dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:spanCount="2"
                tools:listitem="@layout/item_discipline" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_startQuiz"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/shape_button"
        android:src="@drawable/shape_button"
        android:text="@string/start_quiz"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_NewDiscipline"
        app:layout_constraintTop_toTopOf="@+id/btn_NewDiscipline" />

    <com.google.android.material.button.MaterialButton

        android:id="@+id/btn_NewDiscipline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/shape_button"
        android:text="@string/new_discipline"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_startQuiz"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/scroll" />


</androidx.constraintlayout.widget.ConstraintLayout>