<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_discipline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#074E0B"
        android:padding="11dp"
        android:textColor="@color/white"
        android:paddingVertical="5dp"
        android:gravity="top"
        android:paddingStart="10dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Matemática" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_discipline_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_discipline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/scroll"
        android:text="@string/discipline_question_isempty"
        android:textColor="#95000000"
       />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="15dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_dellete_discupline"
        app:layout_constraintTop_toBottomOf="@id/tv_discipline"
       >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_question"
                android:foregroundGravity="top"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="0dp"
                android:layout_marginHorizontal="15dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/item_question"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_dellete_discupline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/shape_button"
        android:padding="8dp"
        android:text="@string/dellete_discipline"
        android:textColor="@color/white"
        android:layout_marginHorizontal="20dp"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_add_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scroll" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/shape_button"
        android:padding="8dp"
        android:text="@string/add_card"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_dellete_discupline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_dellete_discupline"
        app:layout_constraintTop_toTopOf="@+id/btn_dellete_discupline" />

</androidx.constraintlayout.widget.ConstraintLayout>